--- a/src/main/resources/templates/guestbook/modify.html
+++ b/src/main/resources/templates/guestbook/modify.html
@@ -32,9 +32,12 @@
     </div>
     <input type="hidden" name="page" th:value="${pageDto.page}" />
     <input type="hidden" name="size" th:value="${pageDto.size}" />
+    <input type="hidden" name="type" th:value="${requestDto.type}" />
+    <input type="hidden" name="keyword" th:value="${requestDto.keyword}" />
+
     <button type="submit" class="btn btn-primary my-2" onclick="return confirm('수정하시겠습니까?')">MODIFY</button>
-    <a th:href="@{/guestbook/list(page = ${pageDto.page}, size = ${pageDto.size})}" class="btn btn-warning my-2 ">List</a>
-    <button type="submit" class="btn btn-danger my-2" formaction="remove" onclick="return confirm('삭제하시겠습니까?')">REMOVE</button>
+    <a th:href="@{/guestbook/list(page = ${pageDto.page}, size = ${pageDto.size}, type=${requestDto.type}, keyword=${requestDto.keyword})}" class="btn btn-primary my-2 ">List</a>
+    <button type="submit" class="btn btn-danger my-2" formaction="remove" onclick="const result = confirm('삭제하시겠습니까?'); if(result) {document.querySelector('[name=page]').value = 1;} return result;">REMOVE</button>
   </form>
 
   </th:block>
